# melody.kit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  gel.toml  index.html  mkdocs.yml  nginx.conf  objects.inv  pyproject.toml  run.sh  rust-toolchain.toml  search.sh  tailwind.sh
crates/melody-app/: Cargo.toml
crates/melody-app/src/: app.rs  init.rs  lib.rs  main.rs  prepare.rs  runtime.rs  setup.rs
crates/melody-bot/: Cargo.toml
crates/melody-bot/src/: client.rs  commands.rs  composed.rs  core.rs  embeds.rs  format.rs  framework.rs  lib.rs
crates/melody-bridge/: Cargo.toml
crates/melody-bridge/src/: artist.rs  bridge.rs  count.rs  entity.rs  genres.rs  id.rs  lib.rs  macros.rs  option.rs  statistics.rs  string.rs  types.rs  user.rs  vec.rs
crates/melody-cli/: Cargo.toml
crates/melody-cli/src/: app.rs  main.rs
crates/melody-config/: Cargo.toml
crates/melody-config/src/: default.toml  lib.rs  load.rs  macros.rs  parse.rs  prepare.rs  read.rs  types.rs
crates/melody-config/src/config/: context.rs  core.rs  email.rs  hash.rs  image.rs  keyring.rs  kit.rs  mod.rs  path.rs  redis.rs  search.rs  secrets.rs  totp.rs  web.rs
crates/melody-database/: Cargo.toml
crates/melody-database/src/: database.rs  lib.rs  macros.rs
crates/melody-database/src/queries/accounts/: update_password_hash.edgeql  update_secret.edgeql
crates/melody-database/src/queries/albums/: query.edgeql  search.edgeql
crates/melody-database/src/queries/artists/: query.edgeql
crates/melody-database/src/queries/artists/albums/: query.edgeql
crates/melody-database/src/queries/clients/internals/: update_secret_hash.edgeql
crates/melody-database/src/queries/playlists/: insert.edgeql  query.edgeql  search.edgeql  update.edgeql
crates/melody-database/src/queries/self/: query.edgeql
crates/melody-database/src/queries/self/albums/: query.edgeql  save.edgeql
crates/melody-database/src/queries/self/artists/: remove.edgeql  save.edgeql
crates/melody-database/src/queries/self/clients/: add.edgeql
crates/melody-database/src/queries/self/following/: query.edgeql
crates/melody-database/src/queries/self/friends/: query.edgeql
crates/melody-database/src/queries/self/tracks/: remove.edgeql  save.edgeql
crates/melody-database/src/queries/tracks/: query.edgeql  search.edgeql
crates/melody-database/src/queries/users/: query.edgeql  query_by_discord_id.edgeql  query_by_tag.edgeql  search.edgeql
crates/melody-database/src/queries/users/albums/: query.edgeql
crates/melody-database/src/queries/users/artists/: query.edgeql
crates/melody-database/src/queries/users/followers/: query.edgeql
crates/melody-database/src/queries/users/following/: query.edgeql
crates/melody-database/src/schema/: client.rs  statistics.rs  user.rs
crates/melody-enum/: Cargo.toml
crates/melody-enum/src/: lib.rs
crates/melody-hash/: Cargo.toml
crates/melody-hash/src/: hash.rs  lib.rs
crates/melody-keyring/: Cargo.toml
crates/melody-keyring/src/: find.rs  keyring.rs  lib.rs  pairs.rs
crates/melody-kit/: Cargo.toml
crates/melody-kit/src/: build.rs  color.rs  composed.rs  cow.rs  database.rs  enums.rs  errors.rs  hash.rs  init.rs  keyring.rs  kit.rs  lib.rs  load.rs  prepare.rs  redis.rs  run.rs  scopes.rs  setup.rs  state.rs  types.rs  uri.rs
crates/melody-kit/src/config/: core.rs  default.rs  mod.rs  types.rs
crates/melody-kit/src/models/: client.rs  entity.rs  mod.rs  statistics.rs  user.rs  ~pagination.rs
crates/melody-kit/src/queries/accounts/: delete.edgeql  insert.edgeql  query.edgeql  query_by_email.edgeql
crates/melody-kit/src/queries/albums/: delete.edgeql  insert.edgeql
crates/melody-kit/src/queries/albums/tracks/: query.edgeql
crates/melody-kit/src/queries/artists/: insert.edgeql  search.edgeql
crates/melody-kit/src/queries/artists/tracks/: query.edgeql
crates/melody-kit/src/queries/clients/: update.edgeql
crates/melody-kit/src/queries/playlists/tracks/: query.edgeql
crates/melody-kit/src/queries/self/: delete.edgeql
crates/melody-kit/src/queries/self/albums/: remove.edgeql
crates/melody-kit/src/queries/self/artists/: query.edgeql
crates/melody-kit/src/queries/self/clients/: remove.edgeql
crates/melody-kit/src/queries/self/connections/: update_discord_id.edgeql
crates/melody-kit/src/queries/self/followers/: query.edgeql
crates/melody-kit/src/queries/self/following/: add.edgeql  (+1 more)
crates/melody-kit/src/queries/statistics/: query.edgeql
crates/melody-kit/src/queries/tracks/: insert.edgeql
crates/melody-kit/src/queries/users/: insert.edgeql
crates/melody-kit/src/routes/: mod.rs
crates/melody-kit/src/routes/v1/: artists.rs  mod.rs  statistics.rs  users.rs
crates/melody-kit/src/schema/: client.rs  mod.rs  statistics.rs  user.rs
crates/melody-link/: Cargo.toml
crates/melody-link/src/: entities.rs  id.rs  lib.rs  locatable.rs  tag.rs  uri.rs  url.rs  uuid.rs
crates/melody-link/src/links/: apple_music.rs  linked.rs  melody.rs  mod.rs  spotify.rs  yandex_music.rs
crates/melody-model/: Cargo.toml
crates/melody-model/src/: lib.rs  string.rs  types.rs
crates/melody-model/src/models/: album.rs  artist.rs  client.rs  entity.rs  mod.rs  statistics.rs  user.rs  ~pagination.rs
crates/melody-redis/: Cargo.toml
crates/melody-redis/src/: lib.rs  redis.rs
crates/melody-schema/: Cargo.toml
crates/melody-schema/src/: lib.rs  split.rs  types.rs
crates/melody-schema/src/schema/: album.rs  artist.rs  client.rs  entity.rs  mod.rs  statistics.rs  track.rs  user.rs
crates/melody-search/: Cargo.toml
crates/melody-search/src/: invoke.rs  lib.rs  search.rs
crates/melody-state/: Cargo.toml
crates/melody-state/src/: lib.rs  state.rs
crates/melody-vec/: Cargo.toml
crates/melody-vec/src/: lib.rs
crates/melody-web/: Cargo.toml
crates/melody-web/src/: date.rs  lib.rs  routes.rs  web.rs
crates/melody-web/src/routes/: email.rs  keys.rs  mod.rs  projects.rs
crates/melody-web/src/templates/: base.rs  index.rs  mod.rs  not_found.rs
(+368 files in other folders)
