[tool.poetry]
name = "melody.kit"
version = "1.0.0"
description = "All your music, in one place."
authors = ["MelodyKit"]
license = "MIT"

readme = "README.md"

homepage = "https://melodykit.app/"
repository = "https://github.com/MelodyKit/melody.kit"

keywords = ["python", "api", "kit", "web"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Chat = "https://melodykit.app/discord"
Issues = "https://github.com/MelodyKit/melody.kit/issues"

[[tool.poetry.packages]]
include = "melody"

[tool.poetry.scripts]
"melody.bot" = "melody.bot.main:bot"
"melody.kit" = "melody.kit.main:run"

[tool.poetry.dependencies]
# melody
python = ">= 3.8"
versions = ">= 2.1.2"
attrs = ">= 23.2.0"
loguru = ">= 0.7.2"
keyring = ">= 25.2.1"
# melody.kit
qrcode = ">= 7.4.2"
authlib = ">= 1.3.1"
httpx = ">= 0.27.0"  # for `authlib`
itsdangerous = ">= 2.2.0"  # for `starlette`
fastapi = ">= 0.111.0"
toml = ">= 0.10.2"
pendulum = ">= 3.0.0"
edgedb = ">= 1.9.0"
iters = ">= 0.18.0"
redis = ">= 5.0.4"
argon2-cffi = ">= 23.1.0"
click = ">= 8.1.7"
entrypoint = ">= 2.0.3"
email-validator = ">= 2.1.1"
colors-core = ">= 1.1.1"
typing-extensions = ">= 4.12.1"
async-extensions = ">= 4.0.0"
python-multipart = ">= 0.0.9"
pyotp = ">= 2.9.0"
# melody.shared
aiohttp = ">= 3.9.5"
cattrs = ">= 23.2.3"
typing-aliases = ">= 1.10.1"
yarl = ">= 1.9.4"
pillow = ">= 10.3.0"

[tool.poetry.dependencies.aiosmtplib]  # melody.kit
version = ">= 3.0.1"
python = "^3.8"

[tool.poetry.dependencies.uvicorn]  # melody.kit
version = ">= 0.30.1"
extras = ["standard"]

[tool.poetry.dependencies."discord.py"]  # melody.bot
version = ">= 2.3.2"

[tool.poetry.group.format.dependencies]
ruff = "0.4.7"

[tool.poetry.group.check.dependencies]
mypy = "1.10.0"

types-toml = "0.10.8.20240310"
types-redis = "4.6.0.20240425"
types-qrcode = "7.4.0.20240408"
types-pillow = "10.2.0.20240520"

[tool.poetry.group.check.dependencies.pre-commit]
version = "3.7.1"
python = ">= 3.9"

[tool.poetry.group.test.dependencies]
coverage = "7.5.3"
pytest = "8.2.2"
pytest-cov = "5.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.0"
mkdocs-material = "9.5.25"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.25.1"
extras = ["python"]

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "2.3.0"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = [
    "E402",  # module level import not at top of file
    "E741",  # ambiguous variable name
]

[tool.mypy]
strict = true

[tool.changelogging.context]
name = "melody.kit"
version = "1.0.0"
url = "https://github.com/MelodyKit/melody.kit"

[tool.changelogging.formats]
title = "[{{version}}]({{url}}/tree/v{{version}}) ({{date}})"
fragment = "{{content}} ([#{{id}}]({{url}}/pull/{{id}}))"

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
