[package]
name = "melody-bot"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap.workspace = true
melody-kit.workspace = true
miette.workspace = true
poise.workspace = true
rand.workspace = true
serenity.workspace = true
thiserror.workspace = true
