[package]
name = "melody-cli"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
publish.workspace = true
default-run = "melody-cli"

[dependencies]
clap.workspace = true
melody-bot.workspace = true
melody-kit.workspace = true
miette.workspace = true
thiserror.workspace = true
tokio.workspace = true
