[package]
name = "melody-database"
version = "0.1.0"
description = "MelodyKit core database."
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
gel-protocol.workspace = true
gel-tokio.workspace = true
melody-link.workspace = true
melody-schema.workspace = true
miette.workspace = true
thiserror.workspace = true
