[package]
name = "melody-enum"
version = "0.1.0"
description = "MelodyKit enums."
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
miette.workspace = true
paste.workspace = true
serde.workspace = true
thiserror.workspace = true
