[package]
name = "melody-hash"
version = "0.1.0"
description = "MelodyKit hash functionality."
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
bon.workspace = true
melody-config.workspace = true
miette.workspace = true
password-hash.workspace = true
rand.workspace = true
thiserror.workspace = true
