[package]
name = "melody-kit"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
argon2.workspace = true
axum.workspace = true
bon.workspace = true
chrono.workspace = true
clap.workspace = true
edgedb-protocol.workspace = true
edgedb-tokio.workspace = true
env_logger.workspace = true
expand-tilde.workspace = true
keyring.workspace = true
lettre.workspace = true
log.workspace = true
miette.workspace = true
otp-std.workspace = true
rand.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
url.workspace = true
uuid.workspace = true
