[package]
name = "melody-kit"
version = "0.1.0"
description = "MelodyKit API."
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
into-static.workspace = true
melody-enum.workspace = true
melody-link.workspace = true
melody-model.workspace = true
melody-state.workspace = true
miette.workspace = true
non-empty-str.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
