[package]
name = "melody-redis"
version = "0.1.0"
description = "MelodyKit redis."
authors.workspace = true
edition.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
miette.workspace = true
redis.workspace = true
thiserror.workspace = true
